Доработать закупку для объекта и справочники администратора
